--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -7,7 +7,7 @@ body{
 	width: 100%;
 	height: 100vh;
 	display: flex;
-	justify-content: center;
+	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
 	background-image: url(bg3.jpg);
@@ -24,6 +24,11 @@ body{
 }
 .nav span{
 	margin-left: 20px;
+}
+.logo{
+	font-family: 'Dancing Script',cursive;
+	font-size: 24px;
+	background-image: url('05.png');
 }
 .about-us{
 	display: flex;
@@ -99,10 +104,4 @@ text-align: center;
 	background-size: cover;
 	background-position: center center;
 }
-.logo{
-	font-family: 'Dancing Script',cursive;
-	font-size: 24px;
-	background-image: url('05.png');
-}
-
 
