--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,7 @@
 	justify-content: space-between;
 	width: 100%;
 	margin:5px;
+    font-family: fantasy;
 }
 /* #navBar {
     background-color: aqua;
