--- a/aboutus/style.css
+++ b/aboutus/style.css
@@ -25,11 +25,6 @@ body{
 .nav span{
 	margin-left: 20px;
 }
-.logo{
-	font-family: 'Dancing Script',cursive;
-	font-size: 24px;
-	background-image: url('05.png');
-}
 
 @media only screen and (max-width: 1200px) {
 	.container {
@@ -93,28 +88,28 @@ text-align: center;
 .card-img1{
 	width: 100%;
 	height: 12rem;
-	background-image: url('01.jpg');
+	background-image: url('Lane.jpg');
 	background-size: cover;
 	background-position: center center;
 }
 .card-img2{
 	width: 100%;
 	height: 12rem;
-	background-image: url('02.jpg');
+	background-image: url('Bogdan.jpg');
 	background-size: cover;
 	background-position: center center;
 }
 .card-img3{
 	width: 100%;
 	height: 12rem;
-	background-image: url('03.jpg');
+	background-image: url('Jen.jpeg');
 	background-size: cover;
 	background-position: center center;
 }
 .card-img4{
 	width: 100%;
 	height: 12rem;
-	background-image: url('04.jpg');
+	background-image: url('Lorenzo.jpeg');
 	background-size: cover;
 	background-position: center center;
 }
